--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>Campfire Coffee</title>
 	</head>
 	<body>
+		<header>
+			<h1>Campfire Coffee</h1>
+		</header>
+
+		<section class=loc-n-hrs>
+			<h2>Locations and Hours</h2>
+			<p>Pike Place Market --------------- 6:00am - 9:00pm</p>
+			<p>Capitol Hill -------------------- 6:00am - 9:00pm</p>
+			<p>Seattle Public Library ---------- 6:00am - 9:00pm</p>
+			<p>South Lake Union ---------------- 6:00am - 9:00pm</p>
+			<p>Sea-Tac Airport ----------------- 6:00am - 9:00pm</p>
+
+		</section>
 
 	</body>
 </html>
