Added hour array and randomly generated numCustomers

--- a/index.html
+++ b/index.html
@@ -9,15 +9,6 @@
 			<h1>Campfire Coffee</h1>
 		</header>
 
-		<section class=loc-n-hrs>
-			<h2>Locations and Hours</h2>
-			<p>Pike Place Market --------------- 6:00am - 9:00pm</p>
-			<p>Capitol Hill -------------------- 6:00am - 9:00pm</p>
-			<p>Seattle Public Library ---------- 6:00am - 9:00pm</p>
-			<p>South Lake Union ---------------- 6:00am - 9:00pm</p>
-			<p>Sea-Tac Airport ----------------- 6:00am - 9:00pm</p>
-
-		</section>
-
+		<script type="text/javascript" src='app.js'></script>
 	</body>
 </html>
