Completed header row

--- a/data.html
+++ b/data.html
@@ -2,10 +2,14 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="style.css">
-
-		<title></title>
+		<title>Campfire Coffee</title>
 	</head>
 	<body>
+		<header>
+			<h1>Campfire Coffee</h1>
+		</header>
+
 		<script type="text/javascript" src='app.js'></script>
 	</body>
+
 </html>
