both tables are currently working

--- a/data.html
+++ b/data.html
@@ -7,6 +7,8 @@
 	<body>
 		<header>
 			<h1>Campfire Coffee</h1>
+			<a id="homeLink" target="_blank" href="index.html">Home Page</a>
+
 		</header>
 
 		<script type="text/javascript" src='app.js'></script>
