--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 	<body>
 		<header>
 			<h1>Campfire Coffee</h1>
+			<p>bam!</p>
 		</header>
 
-		<script type="text/javascript" src='app.js'></script>
+
 	</body>
 
 </html>
