completed initTable Function

--- a/data.html
+++ b/data.html
@@ -11,6 +11,13 @@
 
 		</header>
 
+		<section id="beanSection">
+
+		</section>
+
+		<section id="baristaSection">
+
+		</section>
 		<script type="text/javascript" src='app.js'></script>
 	</body>
 
