--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
 	<body>
 		<header>
 			<h1>Campfire Coffee</h1>
-			<p>bam!</p>
 		</header>
+
+		<section id="hours">
+			<h2>Hours:</h2>
+			<p>Monday -------------------- 6:00am - 9:00pm</p>
+			<p>Tuesday -------------------- 6:00am - 9:00pm</p>
+			<p>Wednesday ---------------- 6:00am - 9:00pm</p>
+			<p>Thursday ------------------- 6:00am - 9:00pm</p>
+			<p>Friday ---------------------- 6:00am - 9:00pm</p>
+			<p>Saturday ------------------- 6:00am - 9:00pm</p>
+			<p>Sunday -------------------- 6:00am - 9:00pm</p>
+
+		</section>
 
 
 	</body>
