randomizeTable button is working

--- a/data.html
+++ b/data.html
@@ -9,6 +9,10 @@
 			<h1>Campfire Coffee</h1>
 			<a id="homeLink" target="_blank" href="index.html">Home Page</a>
 
+			<p>=====================================================================</p>
+			<input type="button" value="Randomize Values" id="randomize">
+
+
 		</header>
 
 		<!-- Section for bean table -->
@@ -21,9 +25,10 @@
 
 		</section>
 
+
 		<!-- section for form -->
 		<section id="form">
-			<h2>Add New Store</h2>
+			<h3>Add New Store</h2>
 			<form class="newstore" action="app.js" method="post">
 
 				<p></p>
