adTable, removeTable, and evenrHandler functions are all functioning correctly.

--- a/data.html
+++ b/data.html
@@ -45,11 +45,11 @@
 
 				<p></p>
 				<label for="cPC">Average Number of Cups of Coffee Per Customer:</label>
-				<input type="number" id="cPC" name="cPC" size="15">
+				<input type="float" id="cPC" name="cPC" size="15">
 
 				<p></p>
 				<label for="tGCPC">Average Number of Pounds of To-Go Coffee Per Customer:</label>
-				<input type="number" name="tGCPC" size="15">
+				<input type="float" name="tGCPC" size="15">
 
 				<p>=====================================================================</p>
 				<input type="submit" value="Submit Store" id="new-store">
