data.html is now pretty...er

--- a/data.html
+++ b/data.html
@@ -4,16 +4,20 @@
 		<link rel="stylesheet" href="style.css">
 		<title>Campfire Coffee</title>
 	</head>
-	<body>
+	<body id="data">
 		<header>
 			<h1>Campfire Coffee</h1>
 			<a id="homeLink" target="_blank" href="index.html">Home Page</a>
-
 			<p>=====================================================================</p>
-			<input type="button" value="Randomize Values" id="randomize">
-
-
 		</header>
+
+		<!-- Randimize Button -->
+		<section id="randomizeSection">
+
+			<p>RANDOMIZE TABLES!!!!!</p>
+			<input type="button" value="" id="randomize">
+
+		</section>
 
 		<!-- Section for bean table -->
 		<section id="beanSection">
@@ -28,7 +32,7 @@
 
 		<!-- section for form -->
 		<section id="form">
-			<h3>Add New Store</h2>
+			<h3 id="addNewStore">Add New Store</h2>
 			<form class="newstore" action="app.js" method="post">
 
 				<p></p>
