--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 
 			<h2>Hours:</h2>
 
-			<p>Pike Place Market -------------------- 6:00am - 9:00pm</p>
-			<p>Capitol Hill ------------------------- 6:00am - 9:00pm</p>
-			<p>Seattle Public Library --------------- 6:00am - 9:00pm</p>
-			<p>South Lake Union --------------------- 6:00am - 9:00pm</p>
-			<p>Sea-Tac Airport ---------------------- 6:00am - 9:00pm</p>
-
+			<p>Monday ------------------ 6:00am - 9:00pm</p>
+			<p>Tuesday ----------------- 6:00am - 9:00pm</p>
+			<p>Wednesday --------------- 6:00am - 9:00pm</p>
+			<p>Thursday ---------------- 6:00am - 9:00pm</p>
+			<p>Friday ------------------ 6:00am - 9:00pm</p>
+			<p>Saturday----------------- 6:00am - 9:00pm</p>
+			<p>Sunday------------------- 6:00am - 9:00pm</p>
 
 
 		</section>
