finished menu box

--- a/index.html
+++ b/index.html
@@ -35,9 +35,12 @@
 		</section>
 
 		<section id="menu">
-			<h3>Menue:</h3>
-			<p>Coffee in a Cup</p>
-			<p>1 lb of coffee beans</p>
+
+			<div id="menu-text">
+				<h3>Menue:</h3>
+				<p>Coffee in a Cup</p>
+				<p>1 lb of coffee beans</p>
+			</div>
 		</section>
 
 	</body>
