--- a/data.html
+++ b/data.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="data-style.css">
-		<title>Campfire Coffee</title>
+		<title>Campfire Coffee Data Page</title>
 	</head>
 	<body id="data">
 		<header>
