--- a/index.html
+++ b/index.html
@@ -8,14 +8,24 @@
 	<body>
 		<header>
 			<h1>Campfire Coffee</h1>
-
+			<a target="_blank" href="data.html"> link to data.html (for testing purposes)</a>
 		</header>
+
 		<article id="story">
 			<div id="story-text">
 				<h3>About Us:</h3>
 				<p>While camping one weekend, founder Jo Kuppa, noticed that the first cup of coffee from the morning campfire was uniquely wonderful and delicious. She thought about why that might be, and realized that it was the combination of the coffee aroma with the smoke from the campfire that created a distinctive flavor blend. Jo sought to recreate that flavor back in civilization, and over time developed a process for roasting coffee beans over an open wood fire. She also discovered that grinding the beans while they were still warm was the key to getting the flavor she wanted. Now, her unique coffee is available to all who like delicious flavor.</p>
 			</div>
 		</article>
+
+		<section id="menu">
+
+			<div id="menu-text">
+				<h3>Menue:</h3>
+				<p>Coffee in a Cup</p>
+				<p>1 lb of coffee beans</p>
+			</div>
+		</section>
 
 		<section id="hours">
 
@@ -33,16 +43,6 @@
 			</div>
 
 		</section>
-
-		<section id="menu">
-
-			<div id="menu-text">
-				<h3>Menue:</h3>
-				<p>Coffee in a Cup</p>
-				<p>1 lb of coffee beans</p>
-			</div>
-		</section>
-
 	</body>
 
 </html>
